# ai-log-analysis-agent

./: .gitignore  README.md  READMEfull.md  app.py  ingest.py  main.py  pyproject.toml  requirements.txt
data/: sample_logs.csv
