[project]
name = "ai-log-analysis-agent"
version = "0.1.0"
description = "AI-powered log analysis using RAG and MCP-style tools"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.4.0",
    "fastapi>=0.128.0",
    "gradio>=6.3.0",
    "langchain>=1.2.3",
    "torch>=2.9.1",
    "transformers>=4.57.3",
]
