[project]
name = "ai-log-analysis-agent"
version = "0.1.0"
description = "AI-powered log analysis using RAG and MCP-style tools"
readme = "README.md"
requires-python = ">=3.10,<3.11"

dependencies = [
    "gradio==4.44.0",
    "huggingface_hub<0.24.0",

    "chromadb>=0.4.22",
    "langchain>=0.2.14",
    "langchain-community>=0.2.12",
    "langchain-huggingface>=0.0.3",

    "sentence-transformers>=2.6.1",
    "transformers>=4.39.0",
    "torch>=2.1.0",
]
