[project]
name = "ai-log-analysis-agent"
version = "0.1.0"
description = "AI-powered log analysis using RAG and MCP-style tools"
readme = "README.md"

# Hugging Face Spaces runtime
requires-python = ">=3.10,<3.11"

dependencies = [
    # ---- UI (STABLE ON SPACES) ----
    "gradio==4.44.0",

    # ---- CRITICAL FIX ----
    "huggingface_hub==0.23.5",

    # ---- RAG STACK ----
    "chromadb==0.4.24",
    "langchain==0.2.16",
    "langchain-community==0.2.12",
    "langchain-huggingface==0.0.3",

    # ---- MODELS ----
    "sentence-transformers==2.7.0",
    "transformers==4.39.3",
    "torch==2.1.2",
]
